Refactor: implementa a lógica de dto para entity